syntax = "proto3";

package hook;

option go_package = "murmapp.hook/proto;hookpb";

message RegisterWebhookRequest {
  string bot_id = 1;
  bytes api_key_bot = 2;
}

message RegisterWebhookResponse {
  string bot_id = 1;
  string webhook_id = 2;
}